--- a/light-modules/hlo-lightmodule/themes/dev/templates/base/view.pug
+++ b/light-modules/hlo-lightmodule/themes/dev/templates/base/view.pug
@@ -16,8 +16,8 @@ html(lang=iso)
         block structuredschema
     block page
     body
-        //- include /components/header/view.pug
+        include /components/header/view.pug
         .__content
             block content
-        //- include /components/footer/view.pug
+        include /components/footer/view.pug
         block js
